todos los test funcionando tanto en backemd como en frotend, iconoo, splashscrenn,nombre a la app